--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <br>
                     <button class = "button" onclick = "clearGrid();">Clear</button>
                     <button class = "button" onclick = "randomizeGrid();">Randomize</button>
+                    <p class="link" onclick="clickedCopy()">copy link</p>
                 </div>
             </div>
         </div>
