--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Anatol Coen - GOL</title>
+        <title>GOL</title>
         <link rel="stylesheet" href="global.css">
         <link rel="stylesheet" href="cellular.css">
         <script src="main.js"></script>
